2004-04-12  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in ($automake_needs_to_reprocess_all_files): Remove.
	($automake_will_process_aux_dir): New variable.
	(scan_autoconf_traces): Reorder @input_files so that the Makefile
	that distributes aux files is processed last.  This way we do not
	have to process all files twice using
	$automake_will_process_aux_dir.
	(require_file_internal): Suggest a full run of automake when
	appropriate.
	(MAIN): Remove the loop on $automake_needs_to_reprocess_all_files.
	* tests/distcom7.test: New file.
	* tests/reqd2.test: Do not check for the "running more than two"
	message.
	* tests/Makefile.am (TESTS): Add distcom7.test.

	* automake.in (@config_aux_path, $config_aux_dir): Rename as ...
	($config_aux_dir, $am_config_aux_dir): ... these.
	($config_aux_dir_set_in_configure_in): Rename as ...
	($config_aux_dir_set_in_configure_ac): ... this.
	(%require_file_found): Rename as ...
	(%required_file_not_found): ... this.
	(handle_languages, handle_texinfo_helper, handle_dist,
	handle_configure, handle_emacs_lisp, handle_python,
	scan_autoconf_traces, yacc_lex_finish_helper): Adjust to new names.
	(scan_autoconf_traces): Call locate_aux_dir.
	(locate_aux_dir): New function.
	(@require_file_paths): Remove, not used anymore.
	(require_file_internal): Look files in only one directory (instead
	of @require_file_internal) passed in argument.
	(require_file, require_conf_file): Pass the destination directory
	to require_file_internal.

	Fix for PR automake/416:
	* m4/depend.m4 (_AM_DEPENDENCIES): Catch `not supported' ICC 8.0
	remarks.
	From Peter Seiderer.

2004-04-10  Andreas Buening  <andreas.buening@nexgo.de>

	* aclocal.in, automake.in, configure.ac, Makefile.am,
	tests/aclocal.in, tests/automake.in, tests/defs.in:
	Use PATH_SEPARATOR from autoconf instead of ':'.

2004-04-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_lib_objects): Pass the condition of
	the variable definition to handle_LIBOBJS and handle_ALLOCA,