@@ -34,6 +34,14 @@ New in 1.8a:
     endif
     liba_la_SOURCES = ...
 
+* aclocal now ensures that AC_DEFUNs and AU_DEFUNs it discovers are
+  really evaluated, before it decides to include them in aclocal.m4.
+  This solves nasty problems with conditional redefinitions of
+  Autoconf macros in /usr/share/aclocal/*.m4 files causing extraneous
+  *.m4 files to be included in any project using these macros.
+  (Calls to AC_PROG_EGREP causing libtool.m4 to be included is the
+  most famous instance of this bug.)
+
 
 New in 1.8:
 
