@@ -1,3 +1,15 @@
+2004-04-15  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* aclocal.in (%map_traced_defs): New variable.
+	(scan_m4_files): Normalize filenames.
+	(trace_used_macros): Trace for AC_DEFUN and AU_DEFUN, also
+	ask for the filename and the first argument.  Populate
+	%map_traced_defs.
+	(write_aclocal): Use $map_traced_defs to filter out unused
+	definitions.
+	* tests/acloca15.test: New file.
+	* tests/Makefile.am (TESTS): Add acloca15.test.
+
 2004-04-12  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in ($automake_needs_to_reprocess_all_files): Remove.
